--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -50,6 +50,13 @@
   gap: 32px;
 }
 
+.langIcon {
+  width: 20px;
+  height: 20px;
+  object-fit: contain;
+  border-radius: 4px; /* opcional */
+}
+
 @media (min-width: 768px) {
   .nav {
     display: flex;
